# async-jd

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.py  test.sh
.github/workflows/: ci.yml  run_tests.yml
pyjd/: __init__.py  client.py  common.py  crypto.py  direct.py  direct_connector.py  http_client.py  jd_device.py  jd_types.py  myjd_connection_helper.py  myjd_connector.py  myjd_session.py  queries.py
pyjd/endpoints/: __init__.py  accounts.py  captcha.py  config.py  content.py  device.py  dialogs.py  downloads.py  events.py  extensions.py  linkgrabber.py  log.py  plugins.py  polling.py  system.py  toolbar.py  ui.py  update.py
pyjd/myjd/: README.POST_API.md  README.md  api.py  connection.py  session.py
tests/: conftest.py  test_accounts.py  test_captcha.py  test_config.py  test_content.py  test_crypto.py  test_device.py  test_dialogs.py  test_downloads.py
tests/docker/: 60-local-API-settings.sh  Dockerfile  org.jdownloader.api.RemoteAPIConfig.json  start_jdownloader.sh
