[project]
name = "async-jd"
version = "0.0.1"
authors = [{name = "NTFSvolume", email = "NTFSvolume@proton.me"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "pycryptodome",
    "pydantic==1.10.19",
    "requests"
]
description = "A wrapper for the JDownloader API"
keywords = ["api", "asyncio", "jdownloader"]
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.18,<0.12"]

[dependency-groups]
dev = [
    "prek>=0.4.5",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18"
]

[tool.basedpyright]
include = ["pyjd", "tests"]
reportExplicitAny = false
reportImplicitAbstractClass = false
reportImplicitOverride = "hint"
reportImplicitStringConcatenation = false
reportImportCycles = "warning"
reportUnreachable = "hint"
reportUnusedCallResult = false
typeCheckingMode = "recommended"

[tool.coverage.report]
exclude_also = [
    '@(abc\.)?abstractmethod',
    'class .*\bProtocol\):',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:'
]

[tool.coverage.run]
omit = [
    "tests/*"
]

[tool.pytest.ini_options]
addopts = ["--tb=short", "-ra", "-s", "-v"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"
filterwarnings = [
    "error"
]
minversion = "8.4.1"
strict_config = true
strict_markers = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL"
]
extend-safe-fixes = [
    "TC"  # move import from and to TYPE_CHECKING blocks
]
ignore = [
    "ANN",  # flake8-annotations
    "COM812",  # missing-trailing-comma
    "D",  # Documentation
    "E501",  # suppress line-too-long, let formatter decide
    "EM",  # flake8-errmsg
    "FIX002",  # line-contains-todo
    "FLY002",  # static-join-to-f-string
    "G004",  # logging-f-string
    "N806",  # uppercase variables in functions
    "PLC0415",  # import-outside-top-level
    "PLR2004",  # magic-value-comparison
    "PLW2901",  # redefined-loop-name
    "RET503",  # implicit-return
    "S101",  # assert
    "S110",  # try-except-pass
    "S311",  # suspicious-non-cryptographic-random-usage
    "S603",  # subprocess-without-shell-equals-true
    "S607",  # start-process-with-partial-path
    "SIM105",  # suppressible-exception
    "SLF001",  # private-member-access
    "TD",  # flake8-todos
    "TRY003",  # raise-vanilla-args
    "TRY400"  # error-instead-of-exception
]

[tool.ruff.lint.flake8-import-conventions]
banned-from = [
    "base64",
    "dataclasses",
    "datetime",
    "functools",
    "hashlib",
    "itertools",
    "json",
    "math",
    "os",
    "re",
    "sys",
    "time",
    "urllib.parse",
    "uuid"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
ignore_case = true
in_place = true
sort_first = ["name", "project", "select", "version"]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4

[tool.uv]
default-groups = "all"
required-version = ">=0.11.14"

[tool.uv.build-backend]
module-name = ["pyjd"]
module-root = ""
source-include = ["CHANGELOG.md"]
